Fix header title alignment.

--- a/app/components/Header/_Header.scss
+++ b/app/components/Header/_Header.scss
@@ -1,10 +1,13 @@
 @import "../../scss/app";
 
 .Header {
-  border-bottom-width: 1px;
-  border-color: $primary-1-color;
+  //border-bottom-width: 1px;
+  //border-color: $primary-1-color;
+  //border-style: solid;
+
+  border-bottom: 1px solid $primary-1-color;
+
   height: $header-height;
-  border-style: solid;
   position: fixed;
   width: 100%;
   z-index: 10 !important;
@@ -19,6 +22,8 @@
 
 .Header-title--text {
   text-align: center;
+  margin: 0;
+  line-height: 1.5;
 }
 
 .Header-button {
